# mate-paint

./: .gitignore  CMakeLists.txt  MANUAL.md  Makefile  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  mate-paint  mate-paint.cpp  mate-paint.desktop  mate-paint.hpp  meson.build  todo.md
.github/workflows/: ci.yml  nightly.yml
data/: Makefile.in
data/desktop/: Makefile.in  mate-paint.desktop.in.in  meson.build
data/icons/: Makefile.in  meson.build
data/icons/16x16/: Makefile.in
data/icons/16x16/actions/: Makefile.in  meson.build
data/icons/16x16/apps/: Makefile.in  meson.build
data/ui/: Makefile.in  gnome_paint.ui
debian/: changelog  control  copyright  debhelper-build-stamp  files  mate-paint.substvars  rules
po/: LINGUAS  POTFILES  af.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  es_MX.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  it.po  lt.po  meson.build  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sr.po  sr@latin.po  te.po  th.po  (+4 more)
src/: Makefile.am  Makefile.in  color-picker.c  color.c  common.h  cv_airbrush_tool.c  cv_color_pick_tool.c  cv_curve_tool.c  cv_drawing.c  cv_drawing.h  cv_ellipse_tool.c  cv_eraser_tool.c  cv_eraser_tool.h  cv_flood_fill_tool.c  cv_line_tool.c  cv_paintbrush_tool.c  cv_paintbrush_tool.h  cv_pencil_tool.c  cv_polygon_tool.c  cv_rect_select.c  cv_rectangle_tool.c  cv_resize.c  cv_resize.h  cv_rounded_rectangle_tool.c  file.c  gdk_legacy_compat.h  gp-image.c  gp-image.h  image_menu.c  main.c  matepaint.cpp  matepaint.hpp  pixbuf-file-chooser.c  pixbuf-file-chooser.h  pixbuf_util.c  pixbuf_util.h  selection.c  selection.h  toolbar.c  toolbar.h  (+2 more)
src/pixmaps/: Makefile.in
